# vinyl-vectors

./: .gitignore  .stylish-haskell.yaml  README.markdown  stack.yaml  vinyl-vectors.cabal
examples/: joining.hs  query.hs  sorting.hs  sublist.hs  symbol.hs
scripts/: build
src/Data/: Relation.hs  TypeString.hs  Vec.hs
src/Data/Dynamic/: Constraint.hs
src/Data/List/: Symbol.hs  TypeLevel.hs
src/Data/List/TypeLevel/: Cmp.hs  Constraint.hs  Intersection.hs  Subtraction.hs  Union.hs  Witness.hs
src/Data/List/TypeLevel/Witness/: BoundedList.hs  OrdList.hs  Rec.hs
src/Data/Proxy/: TH.hs
src/Data/Relation/: Backend.hs
src/Data/Relation/Run/: Basic.hs  Naive.hs  Test.hs
src/Data/Tagged/: Functor.hs
src/Data/Tuple/: TypeLevel.hs
src/Data/Vector/: Vec.hs  Vinyl.hs
src/Data/Vector/Vec/: Internal.hs
src/Data/Vector/Vinyl/: Default.hs  Internal.hs  TypeLevel.hs
src/Data/Vector/Vinyl/Default/: Implication.hs  Internal.hs  Mutable.hs  Types.hs
src/Data/Vector/Vinyl/Default/Empty/: Monomorphic.hs
src/Data/Vector/Vinyl/Default/Empty/Monomorphic/: Implication.hs  Internal.hs  Mutable.hs
src/Data/Vector/Vinyl/Default/NonEmpty/: Monomorphic.hs  Tagged.hs
src/Data/Vector/Vinyl/Default/NonEmpty/Monomorphic/: Implication.hs  Internal.hs  Join.hs
src/Data/Vector/Vinyl/Default/NonEmpty/Polymorphic/: Implication.hs  Internal.hs
src/Data/Vector/Vinyl/Default/NonEmpty/Tagged/: Implication.hs  Internal.hs
src/Data/Vector/Vinyl/Default/Types/: Derived.hs  Deriving.hs
src/Data/Vinyl/: Arbitrary.hs  DictFun.hs  List.hs  Named.hs  Random.hs
src/Data/Vinyl/Class/: Implication.hs
test/: Test.hs
test/Test/: Relation.hs
