name:                vinyl-vectors
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vinyl-vectors#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Vinyl.Default
                     , Data.Vector.Vinyl.Default.Internal
  build-depends:       base >= 4.7 && < 5
                     , vinyl >= 0.5.1 && < 0.5.2
                     , vector >= 0.10 && < 0.12
                     , primitive >=0.6 && <0.7
  default-language:    Haskell2010

  ghc-options: -Wall -O2

source-repository head
  type:     git
  location: https://github.com/andrewthad/vinyl-vectors
