name:                vinyl-vectors
version:             0.2.0
synopsis:            Vectors for vinyl vectors
description:         This library provides vectors of vinyl records stored
                     as a structure of arrays. This vectors types provided
                     implement the generic vector interface and can be
                     used with any library that accepts a generic vector
                     type.
homepage:            http://github.com/andrewthad/vinyl-vectors
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2015 Andrew Martin
category:            Vector
build-type:          Simple
cabal-version:       >=1.10

flag examples
  description: Build example programs
  default:     False

library
  hs-source-dirs: src
  exposed-modules:     
      Data.Vector.Vinyl.Default.Empty.Monomorphic
    , Data.Vector.Vinyl.Default.Empty.Monomorphic.Implication
    , Data.Vector.Vinyl.Default.Empty.Monomorphic.Internal
    , Data.Vector.Vinyl.Default.Empty.Monomorphic.Mutable

    , Data.Vector.Vinyl.Default.NonEmpty.Tagged
    , Data.Vector.Vinyl.Default.NonEmpty.Tagged.Internal
    , Data.Vector.Vinyl.Default.NonEmpty.Tagged.Implication

    , Data.Vector.Vinyl.Default.NonEmpty.Monomorphic
    , Data.Vector.Vinyl.Default.NonEmpty.Monomorphic.Internal
    , Data.Vector.Vinyl.Default.NonEmpty.Monomorphic.Implication
    , Data.Vector.Vinyl.Default.NonEmpty.Monomorphic.Join

    -- , Data.Vector.Vinyl.Default.NonEmpty.Polymorphic.Internal
    -- , Data.Vector.Vinyl.Default.NonEmpty.Polymorphic.Implication

    , Data.Vector.Vinyl.Default.Types
    , Data.Vector.Vinyl.Default.Types.Deriving

    , Data.Vector.Vec
    , Data.Vector.Vec.Internal

    , Data.Vinyl.DictFun
    , Data.Vinyl.Named
    , Data.Vinyl.Arbitrary
    , Data.Vinyl.Class.Implication

    , Data.Vec
    , Data.TypeString
    , Data.Relation
    , Data.Relation.Run.Naive
    , Data.Relation.Run.Basic
    , Data.Relation.Backend
    , Data.Dynamic.Constraint
    , Data.Tuple.TypeLevel
    , Data.List.TypeLevel
    , Data.List.TypeLevel.Cmp
    , Data.List.TypeLevel.Union
    , Data.List.TypeLevel.Subtraction
    , Data.List.TypeLevel.Constraint
    , Data.List.Symbol
    , Data.Proxy.TH
    , Data.Tagged.Functor
    , Data.Vinyl.Random
  build-depends:       
      base              >= 4.7     && < 5
    , QuickCheck        >= 2.8.0
    , bytestring
    , constraints       >= 0.4
    , containers        >= 0.5.0
    , data-default      >= 0.5
    , ghc-prim          >= 0.4.0.0
    , hybrid-vectors    >= 0.2.1
    , primitive         >= 0.6     && <0.7
    , template-haskell  >= 2.5
    , text 
    , vector            >= 0.11    && < 0.12
    , vector-algorithms >= 0.6.0.0 && < 1.0
    , vinyl             >= 0.5.1   && < 0.5.2
    , transformers      >= 0.4.2   && < 0.5.0
    , semigroups        >= 0.16
    , fgl
    , tagged            >= 0.8     && < 0.9
    , time              >= 1.5     && < 1.6
    , random            >= 1.1     && < 1.2
  default-extensions:
    KindSignatures
    StandaloneDeriving
    TypeOperators
    GADTs
    DataKinds
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    InstanceSigs
    TypeFamilies
    FlexibleContexts
    ConstraintKinds
    UndecidableInstances
    PolyKinds
    -- Don't enable PolyKinds. It makes the vector
    -- stuff freak out.
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -ddump-minimal-imports

-- executable sorting
--   if !flag(examples)
--     buildable: False
--   main-is: sorting.hs
--   if flag(examples)
--     build-depends: 
--         vinyl-vectors
--       , base              >= 4.7 && < 5.0
--       , vector-algorithms >= 0.6.0.0 && < 1.0
--       , text              >= 0.8.0.0
--       , vinyl             >= 0.5.1 && < 0.6.0
--       , microlens         >= 0.1
--   hs-source-dirs: examples
--   default-language: Haskell2010
--   ghc-options: -O2

executable joining
  if !flag(examples)
    buildable: False
  main-is: joining.hs
  if flag(examples)
    build-depends: 
        vinyl-vectors
      , base              >= 4.7 && < 5.0
      , hybrid-vectors    >= 0.2.1
      , text              >= 0.8.0.0
      , vector            >= 0.10 
  hs-source-dirs: examples
  default-language: Haskell2010
  ghc-options: -O2

executable query
  if !flag(examples)
    buildable: False
  main-is: query.hs
  if flag(examples)
    build-depends: 
        vinyl-vectors
      , vinyl             >= 0.5.1
      , base              >= 4.7 && < 5.0
      , text              >= 0.8.0.0
      , vector            >= 0.10 && < 0.12
      , constraints       >= 0.4
      , random            >= 1.1 && < 1.2
  hs-source-dirs: examples
  default-language: Haskell2010
  ghc-options: -O2 -ddump-tc -ddump-parsed

executable sublist
  if !flag(examples)
    buildable: False
  main-is: sublist.hs
  if flag(examples)
    build-depends: 
        vinyl-vectors
      , base              >= 4.7 && < 5.0
      , text              >= 0.8.0.0
  hs-source-dirs: examples
  default-language: Haskell2010
  ghc-options: -O0

executable symbol
  if !flag(examples)
    buildable: False
  main-is: symbol.hs
  if flag(examples)
    build-depends: 
        vinyl-vectors
      , base              >= 4.7 && < 5.0
  hs-source-dirs: examples
  default-language: Haskell2010
  ghc-options: -O2

test-suite             vinyl-vectors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.Relation
  default-language: Haskell2010
  default-extensions:  
    TypeFamilies
    DataKinds
    TemplateHaskell
    QuasiQuotes
    OverloadedStrings
    PolyKinds
    RankNTypes
  build-depends:       
      vinyl-vectors
    , HUnit             >= 1.2
    , QuickCheck        >= 2.8.0
    , base              >= 4.7 && < 5.0
    , containers
    , hybrid-vectors >= 0.2.1
    , test-framework    >= 0.8
    , test-framework-hunit    
    , test-framework-quickcheck2
    , text
    , time
    , vector            >= 0.10 && < 0.12
    , vinyl             >= 0.5.1 && < 0.6.0

source-repository head
  type:     git
  location: https://github.com/andrewthad/vinyl-vectors
